--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "mortgage-calculator-react": "^0.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-faq-component": "^1.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.5",
